[gd_scene load_steps=4 format=2]

[ext_resource path="res://font/Resagnicto.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="EnemyHealthLabel" type="Label" parent="."]
margin_left = 272.0
margin_top = 38.0
margin_right = 300.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -64.0
margin_right = 187.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "n a t h i n m y m i n d"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -159.0
margin_top = -28.0
margin_right = -52.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="AttackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 63.0
margin_right = 50.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "Attack"

[node name="PhaseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 4.0
margin_right = 229.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "Phase"
align = 1

[node name="DamageLabel" type="Label" parent="."]
margin_left = 232.0
margin_top = 89.0
margin_right = 279.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "DMG = 0"

[connection signal="check_tip_off" from="." to="." method="_on_MessageArea2D_mouse_exited"]
[connection signal="check_tip_on" from="." to="." method="_on_MessageArea2D_mouse_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
